<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Convert"
        android:id="@+id/textView"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/convertValue"
        android:inputType="number|numberSigned|numberDecimal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/from"
                android:id="@+id/textView2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fromGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fahrenheit"
                    android:id="@+id/Fahrenheit"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Celsius"
                    android:id="@+id/Celsius"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kelvin"
                    android:id="@+id/Kelvin"
                    android:checked="false" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/to"
                android:id="@+id/textView3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fahrenheit"
                    android:id="@+id/toFahrenheit"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Celsius"
                    android:id="@+id/toCelsius" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kelvin"
                    android:id="@+id/toKelvin" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Convert"
        android:id="@+id/button" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Num From = Num To"
            android:id="@+id/convertedView"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Conversion Formula:"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="To = From"
            android:id="@+id/conFormula"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="top|center_horizontal" />
    </LinearLayout>

</LinearLayout>
